--- a/views/show.erb
+++ b/views/show.erb
@@ -6,7 +6,7 @@
   </p>
 <% end %>
 <p>
-<%= La palabra es: #{@game.word}" %>
+<%= puts "La palabra es: #{@game.word}" %>
 </p>
 <p>
   Wrong Guesses:
