--- a/views/show.erb
+++ b/views/show.erb
@@ -6,7 +6,7 @@
   </p>
 <% end %>
 <p>
-<%= puts "La palabra es: #{@game.word}" %>
+<%= p "La palabra es: #{@game.word}" %>
 </p>
 <p>
   Wrong Guesses:
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-  Word so far:
+  Palabra hasta ahora:
   <span class="word"><%= @game.word_with_guesses %></span>
 </p>
 
